# mem0-mcp-selfhosted

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
benchmarks/: mcp_e2e_battle.py
skills/mem0/: SKILL.md
src/mem0_mcp_selfhosted/: __init__.py  config.py  helpers.py  llm_anthropic.py  server.py
tests/unit/: test_helpers.py  test_server.py
